refactor(swagger) criando um array de atributos na iniciliazação do swagger no arquivo 'Controller.php'
